Fix div wrap

--- a/connect-four/styles.css
+++ b/connect-four/styles.css
@@ -2,6 +2,8 @@
     border: 1px solid black;
     height: 120px;
     width: 140px;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .grid div {
